--- a/barulandia.html
+++ b/barulandia.html
@@ -15,10 +15,20 @@
     <div align="center">
         <!-- texteffect -t "Barulandia" -s outline -e wave-bottom -d 0.15 -p 100 -c green  -o black -b none -l 1 -s hardshadow -u darkgreen -f Obelix-Pro-Bold-Italic titulo.png -->
         <img src="img/titulo.png" />
-        <canvas id="draw" width="800" height="600" style="border:1px solid black">Your browser does not support the HTML5 canvas tag.</canvas>
-        <canvas id="tools" width="800" height="50" style="border:1px solid black">Your browser does not support the HTML5 canvas tag.</canvas>
-        <canvas id="palette" width="800" height="150" style="border:1px solid black">Your browser does not support the HTML5 canvas tag.</canvas>
     </div>
+        <div align="center">
+            <canvas id="draw" width="800" height="600" style="border:1px solid black">Your browser does not support the HTML5 canvas tag.</canvas>
+        </div>
+        <div align="center">
+            <!-- texteffect2 -e normal -s hardshadow -f Brady-Bunch-Remastered -p 200 -c red -hw 5 -bg none -t "<" prev.png -->
+            <img id="prev" width="200" height="50" src="img/prev.png">
+            <canvas id="tools" width="200" height="50" style="border:1px solid black">Your browser does not support the HTML5 canvas tag.</canvas>
+            <img id="clean" width="200" height="50" src="img/clean.png">
+            <img id="next" width="200" height="50" src="img/next.png">
+    </div>
+            <div align="center">
+                <canvas id="palette" width="800" height="150" style="border:1px solid black">Your browser does not support the HTML5 canvas tag.</canvas>
+            </div>
 </body>
 
 </html>
