--- a/barulandia.html
+++ b/barulandia.html
@@ -24,13 +24,14 @@
         </div>
         <div align="center">
             <!-- texteffect2 -e normal -s hardshadow -f Brady-Bunch-Remastered -p 200 -c red -hw 5 -bg none -t "<" prev.png -->
-            <img alt="" id="prev" width="115" height="50" src="img/prev.png">
-            <img alt="" id="next" width="114" height="50" src="img/next.png">
-            <img alt="" id="clean" width="115" height="50" src="img/clean.png">
-            <img alt="" id="back" width="114" height="50" src="img/back.png">
-            <img alt="" id="paint" width="114" height="50" src="img/paint.png">
-            <img alt="" id="erase" width="114" height="50" src="img/erase.png">
-            <canvas id="color" width="114" height="50" style="border:1px solid black">Your browser does not support the HTML5 canvas tag.</canvas>
+            <img alt="" id="prev" width="100" height="50" src="img/prev.png">
+            <img alt="" id="next" width="100" height="50" src="img/next.png">
+            <img alt="" id="clean" width="100" height="50" src="img/clean.png">
+            <img alt="" id="back" width="100" height="50" src="img/back.png">
+            <img alt="" id="paint" width="100" height="50" src="img/paint.png">
+            <img alt="" id="erase" width="100" height="50" src="img/erase.png">
+            <img alt="" id="eyedrop" width="100" height="50" src="img/eyedrop.png">
+            <canvas id="color" width="100" height="50" style="border:1px solid black">Your browser does not support the HTML5 canvas tag.</canvas>
         </div>
         <div align="center">
             <canvas id="palette" width="800" height="150" style="border:1px solid black">Your browser does not support the HTML5 canvas tag.</canvas>
