lint; semi-"Google Style"; minor estetic fix

--- a/barulandia.html
+++ b/barulandia.html
@@ -10,7 +10,7 @@
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" type="text/css" href="barulandia.css" />
-    <script type="text/javascript" src="PaintEngine.js"></script>
+    <script type="text/javascript" src="paintengine.js"></script>
     <script type="text/javascript" src="barulandia.js"></script>
 </head>
 
