--- a/barulandia.html
+++ b/barulandia.html
@@ -31,6 +31,7 @@
             <img class="tool_button" alt="" id="paint" src="img/paint.png">
             <img class="tool_button" alt="" id="erase" src="img/erase.png">
             <img class="tool_button" alt="" id="eyedrop" src="img/eyedrop.png">
+            <img class="tool_button" alt="" id="sticker" src="img/sticker.png">
             <canvas class="tool_button tool_selected" id="color">Your browser does not support the HTML5 canvas tag.</canvas>
         </div>
         <div align="center">
