redo history (bug!)

--- a/barulandia.html
+++ b/barulandia.html
@@ -28,6 +28,7 @@
             <img class="tool_button" alt="" id="next"  src="img/next.png">
             <img class="tool_button" alt="" id="clean" src="img/clean.png">
             <img class="tool_button" alt="" id="back"  src="img/back.png">
+            <img class="tool_button" alt="" id="redo"  src="img/redo.png">
             <img class="tool_button" alt="" id="paint" src="img/paint.png">
             <img class="tool_button" alt="" id="erase" src="img/erase.png">
             <img class="tool_button" alt="" id="eyedrop" src="img/eyedrop.png">
