color setter; tests

--- a/t/test02.html
+++ b/t/test02.html
@@ -16,7 +16,7 @@
 
 <body>
     <div style="border:1px solid black;">
-        { sketch_canvas: 'canvas1', sketch_files: ['draw01.png'], color: { r: 0x00, g: 0xff, b: 0x00, a: 0xff } }
+        new PaintEngine( { sketch_canvas: 'canvas1', sketch_files: [ 'draw01.png' ], color: { r: 0x00, g: 0xff, b: 0x00, a: 0xff } } )
     </div>
     <br><canvas id="canvas1" width="800" height="600" />
 </body>
