fix tests; check preto absoluto antes de pintar; novos testes de pintar, selecionar palete e mostrar a cor selecionada

--- a/t/test01.html
+++ b/t/test01.html
@@ -15,7 +15,9 @@
 
 <body>
     <div style="border:1px solid black;">
-        new PaintEngine( { sketch_canvas: 'canvas1', sketch_files: [ 'draw01.png' ] } )
+        new PaintEngine( { sketch_canvas: , sketch_files: [ ] } )
     </div>
-    <br><canvas id="canvas1" width="800" height="600" />
+    <br><canvas id="canvas1" width="800" height="600"></canvas>
 </body>
+
+</html>
