--- a/t/test13.html
+++ b/t/test13.html
@@ -15,8 +15,11 @@
             sketch_canvas: 'canvas1',
             sketch_files: ['draw01.png'],
             paint_btn_id: 'btn_paint',
-            erase_btn_id: 'btn_erase',
-            css_class_border: 'tool_selected'
+            eyedrop_btn_id: 'btn_eyedrop',
+            css_class_border: 'tool_selected',
+            aux_canvas: 'canvas2',
+            palette_file: 'palette.png',
+            current_color_canvas: 'canvas3'
         });
         paint_engine.run();
     }
@@ -25,12 +28,14 @@
 
 <body>
     <div style="border:1px solid black;">
-        new PaintEngine( { sketch_canvas: , sketch_files: [ ] } , paint_btn_id: , erase_btn_id: , css_class_border: )
+        new PaintEngine( { sketch_canvas: , sketch_files: [ ] } , paint_btn_id: , eyedrop_btn_id: , css_class_border: , aux_canvas: , palette_file: , current_color_canvas: )
     </div>
     <br><canvas id="canvas1" width="800" height="600"></canvas>
     <br>
+    <canvas id="canvas3" width="50" height="50"></canvas>
     <img id='btn_paint' src='btn_paint.png'>
-    <img id='btn_erase' src='btn_erase.png'>
+    <img id='btn_eyedrop' src='btn_eyedrop.png'>
+    <br><canvas id="canvas2" width="800" height="200"></canvas>
 </body>
 
-    </html>
+</html>
