--- a/t/test13.html
+++ b/t/test13.html
@@ -17,7 +17,7 @@
             paint_btn_id: 'btn_paint',
             eyedrop_btn_id: 'btn_eyedrop',
             css_class_border: 'tool_selected',
-            aux_canvas: 'canvas2',
+            palette_canvas: 'canvas2',
             palette_file: 'palette.png',
             current_color_canvas: 'canvas3'
         });
@@ -28,7 +28,7 @@
 
 <body>
     <div style="border:1px solid black;">
-        new PaintEngine( { sketch_canvas: , sketch_files: [ ] } , paint_btn_id: , eyedrop_btn_id: , css_class_border: , aux_canvas: , palette_file: , current_color_canvas: )
+        new PaintEngine( { sketch_canvas: , sketch_files: [ ] } , paint_btn_id: , eyedrop_btn_id: , css_class_border: , palette_canvas: , palette_file: , current_color_canvas: )
     </div>
     <br><canvas id="canvas1" width="800" height="600"></canvas>
     <br>
