--- a/t/test08.html
+++ b/t/test08.html
@@ -7,7 +7,7 @@
         var paint_engine = new PaintEngine({
             sketch_canvas: 'canvas1',
             sketch_files: ['draw01.png', 'draw02.png'],
-            aux_canvas: 'canvas2',
+            palette_canvas: 'canvas2',
             palette_file: 'palette.png',
             current_color_canvas: 'canvas3',
             prev_btn_id: 'btn_prev',
@@ -21,7 +21,7 @@
 
 <body>
     <div style="border:1px solid black;">
-        new PaintEngine( { sketch_canvas: , sketch_files: [ ] , aux_canvas: , palette_file: , current_color_canvas: , prev_btn_id: , reload_btn_id: , next_btn_id: } )
+        new PaintEngine( { sketch_canvas: , sketch_files: [ ] , palette_canvas: , palette_file: , current_color_canvas: , prev_btn_id: , reload_btn_id: , next_btn_id: } )
     </div>
     <br><canvas id="canvas1" width="800" height="600"></canvas>
     <br>
