removido user-def sticker_scale_x/sticker_scale_y e implementada autoscale

--- a/t/test15.html
+++ b/t/test15.html
@@ -12,8 +12,6 @@
             sticker_x: 3,
             sticker_y: 3,
             current_sticker_canvas: 'canvas3',
-            sticker_scale_x: 2,
-            sticker_scale_y: 2,
         });
         paint_engine.run();
         paint_engine.sticker();
@@ -23,7 +21,7 @@
 
 <body>
     <div style="border:1px solid black;">
-        new PaintEngine( { sketch_canvas: , sketch_files: [ ] } , sticker_canvas: , sticker_file: , sticker_x: , sticker_y: , current_sticker_canvas: , sticker_scale_x: , sticker_scale_y: )
+        new PaintEngine( { sketch_canvas: , sketch_files: [ ] } , sticker_canvas: , sticker_file: , sticker_x: , sticker_y: , current_sticker_canvas: )
     </div>
     <br><canvas id="canvas1" width="800" height="600"></canvas>
     <br><canvas id="canvas3" width="200" height="200"></canvas>
