implementado color_blacklist[] onde as ferramentas não funcionam; implementado color_transparency[] que limpa os stickers

--- a/t/test14.html
+++ b/t/test14.html
@@ -6,9 +6,9 @@
     window.onload = function() {
         var paint_engine = new PaintEngine({
             sketch_canvas: 'canvas1',
-            sketch_files: ['no-file'],
+            sketch_files: ['draw00.png'],
             sticker_canvas: 'canvas2',
-            sticker_file: 'stickers.png',
+            sticker_file: 'stickers01.png',
             sticker_x: 3,
             sticker_y: 3,
         });
