--- a/t/test19.html
+++ b/t/test19.html
@@ -6,12 +6,12 @@
     window.onload = function() {
         var paint_engine = new PaintEngine({
             sketch_canvas: 'canvas1',
-            sketch_files: ['draw00.png'],
+            sketch_files: ['draw04.png'],
             sticker_canvas: 'canvas2',
-            sticker_file: 'stickers01.png',
+            sticker_file: 'stickers03.png',
             sticker_x: 3,
             sticker_y: 3,
-            current_sticker_canvas: 'canvas3',
+            color_transparency: [{ r: 255, g: 0, b: 0, a: 255 }, { r: 255, g: 255, b: 255, a: 255 }]
         });
         paint_engine.run();
         paint_engine.sticker();
@@ -21,10 +21,9 @@
 
 <body>
     <div style="border:1px solid black;">
-        new PaintEngine( { sketch_canvas: , sketch_files: [ ] } , sticker_canvas: , sticker_file: , sticker_x: , sticker_y: , current_sticker_canvas: )
+        new PaintEngine( { sketch_canvas: , sketch_files: [ ] } , sticker_canvas: , sticker_file: , sticker_x: , sticker_y: , color_transparency: )
     </div>
     <br><canvas id="canvas1" width="800" height="600"></canvas>
-    <br><canvas id="canvas3" width="200" height="200"></canvas>
     <br><canvas id="canvas2" width="300" height="300"></canvas>
 </body>
 
