--- a/t/test18.html
+++ b/t/test18.html
@@ -13,25 +13,23 @@
     window.onload = function() {
         var paint_engine = new PaintEngine({
             sketch_canvas: 'canvas1',
-            sketch_files: ['draw01.png', 'draw02.png'],
+            sketch_files: ['draw03.png'],
             paint_btn_id: 'btn_paint',
             eyedrop_btn_id: 'btn_eyedrop',
             css_class_border: 'tool_selected',
             palette_canvas: 'canvas2',
             palette_file: 'palette.png',
             current_color_canvas: 'canvas3',
-            sticker_file: 'stickers01.png',
+            sticker_file: 'stickers02.png',
             sticker_x: 3,
             sticker_y: 3,
-            sticker_canvas: 'canvas5',
-            current_sticker_canvas: 'canvas4',
+            sticker_canvas: 'canvas2',
+            current_sticker_canvas: 'canvas3',
             undo_btn_id: 'btn_undo',
             redo_btn_id: 'btn_redo',
-            prev_btn_id: 'btn_prev',
-            reload_btn_id: 'btn_reload',
-            next_btn_id: 'btn_next',
             erase_btn_id: 'btn_erase',
             sticker_btn_id: 'btn_sticker',
+            color_blacklist: [{ r: 0x00, g: 0x00, b: 0x00, a: 0xff }, { r: 219, g: 56, b: 56, a: 0xff }]
         });
         paint_engine.run();
     }
@@ -40,16 +38,11 @@
 
 <body>
     <div style="border:1px solid black;">
-        new PaintEngine( { sketch_canvas: , sketch_files: , paint_btn_id: , eyedrop_btn_id: , css_class_border: , palette_canvas: , palette_file: , current_color_canvas: , sticker_file: , sticker_x: , sticker_y: , sticker_canvas: , current_sticker_canvas: , undo_btn_id: , redo_btn_id: ', prev_btn_id: , reload_btn_id: , next_btn_id: , erase_btn_id: , sticker_btn_id: )
+        new PaintEngine( { sketch_canvas: , sketch_files: , paint_btn_id: , eyedrop_btn_id: , css_class_border: , palette_canvas: , palette_file: , current_color_canvas: , sticker_file: , sticker_x: , sticker_y: , sticker_canvas: , current_sticker_canvas: , undo_btn_id: , redo_btn_id: ', prev_btn_id: , reload_btn_id: , next_btn_id: , erase_btn_id: , sticker_btn_id: , color_blacklist: )
     </div>
     <br><canvas id="canvas1" width="800" height="600"></canvas>
     <br>
     <canvas id="canvas3" width="50" height="50"></canvas>
-    <canvas id="canvas4" width="100" height="100"></canvas>
-    <br>
-    <img id='btn_prev' src='btn_prev.png'>
-    <img id='btn_reload' src='btn_reload.png'>
-    <img id='btn_next' src='btn_next.png'>
     <br>
     <img id='btn_undo' src='btn_undo.png'>
     <img id='btn_redo' src='btn_redo.png'>
@@ -59,7 +52,6 @@
     <img id='btn_erase' src='btn_erase.png'>
     <img id='btn_sticker' src='btn_sticker.png'>
     <br><canvas id="canvas2" width="800" height="200"></canvas>
-    <br><canvas id="canvas5" width="300" height="300"></canvas>
 </body>
 
 </html>
